--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ body {
 }
 main {
     height: fit-content;
-    padding: 50px;
+    padding: 30px;
     background-color: white;
-    width: 20%;
+    width: 21%;
     border-style: clear;
     border-radius: 20px;
 }
@@ -23,13 +23,33 @@ img {
     width: 100%;
     border-radius: 10px;
 }
-img, h1, h2, p, section, ol, ul {
-    margin-bottom: 10px;
+img, h1, h2, h3, p, section, ol, ul, hr {
+    margin-bottom: 20px;
 }
 P {
     font-size: .8rem;
 }
+h2 {
+    color: hsl(332, 51%, 32%);
+    font-size: 1.0rem;
+}
+.preparation {
+    margin-bottom: 0;
+}
+.ingredients {
+    padding-left: 5px;
+}
+h3 {
+    color: hsl(14, 45%, 36%);
+}
+ul, ol {
+    font-size: .8rem;
+}
+li {
+    margin-bottom: 5px;
+}
 section {
+    height: fit-content;
     background-color: hsl(330, 100%, 98%);
     padding: 20px;
     border-radius: 10px;
@@ -38,4 +58,15 @@ section {
 ul, ol {
     list-style-position: inside;
 }
-
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+tr {
+    border-bottom: 1pt solid black;
+}
+footer {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 10px;
+}
