--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 body {
+    font-family: "Young Serif";
     height: 100vh;
     background-color: hsl(23, 100%, 92%);
     display: flex;
@@ -26,8 +27,16 @@ img {
 img, h1, h2, h3, p, section, ol, ul, hr {
     margin-bottom: 20px;
 }
+p, li, h2, table {
+    font-family: "Outfit";
+}
 P {
-    font-size: .8rem;
+    color: hsl(30, 10%, 34%);
+    font-size: .6rem;
+}
+h1 {
+    color: hsl(24, 5%, 18%);
+    font-size: 1.5rem;
 }
 h2 {
     color: hsl(332, 51%, 32%);
@@ -46,6 +55,8 @@ ul, ol {
     font-size: .8rem;
 }
 li {
+    color: hsl(30, 10%, 34%);
+    font-size: .7rem;
     margin-bottom: 5px;
 }
 section {
@@ -58,15 +69,30 @@ section {
 ul, ol {
     list-style-position: inside;
 }
+li::marker {
+    color: hsl(14, 45%, 36%);
+}
 table {
     width: 100%;
-    border-collapse: collapse;
+    font-size: .8rem;
 }
-tr {
-    border-bottom: 1pt solid black;
+th.border-bottom, td.border-bottom {
+    border-bottom: 1px solid;
+}
+th {
+    width: 200px;
+    color: hsl(30, 10%, 34%);
+    text-align: left;
+    font-weight: normal;
+    padding-left: 20px;
+    border-style: clear;
+}
+td {
+    font-weight: bold;
+    color: hsl(14, 45%, 36%);
 }
 footer {
     position: absolute;
     bottom: 0;
-    margin-bottom: 10px;
+    margin-bottom: 0;
 }
