Removed the gap between borders within the tableand adjusted the margin-bottom of the paragraph nested beneath the 'Nutrition' header as to remove the whitespace created when adjusting the cell-padding within the table. Lastly, adjusted the footer at the bottom of the page to contain a live URL.

--- a/style.css
+++ b/style.css
@@ -72,15 +72,28 @@ ul, ol {
 li::marker {
     color: hsl(14, 45%, 36%);
 }
+p.nutrition {
+    border-style: clear;
+    margin-bottom: 10px;
+}
 table {
     width: 100%;
     font-size: .8rem;
+    border-collapse: collapse;
 }
 th.border-bottom, td.border-bottom {
     border-bottom: 1px solid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+th.top-cell, td.top-cell {
+    padding-top: 0;
+}
+th.bottom-cell, td.bottom-cell {
+    padding-top: 10px;
 }
 th {
-    width: 200px;
+    width: 205px;
     color: hsl(30, 10%, 34%);
     text-align: left;
     font-weight: normal;
