--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     align-items: center;
 }
 main {
+    min-width: 200px;
     height: fit-content;
     padding: 30px;
     background-color: white;
