--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ P {
     color: hsl(30, 10%, 34%);
     font-size: .7rem;
 }
+hr {
+    color: hsl(0, 0%, 87%);
+    border-style: solid;
+}
 h1 {
     color: hsl(24, 5%, 18%);
     font-size: 1.5rem;
